@@ -1,3 +1,7 @@
+bzr 0.11  2006-10-02
+
+    * Smart server transport test failures on windows fixed. (Lukáš Lalinský).
+
 bzr 0.11rc2  2006-09-27
 
   BUG FIXES:
